--- a/Web/Admin/admin.master
+++ b/Web/Admin/admin.master
@@ -14,10 +14,14 @@
 <body>
     <form id="form1" runat="server">
     <div class="container showgrid">
-        <div class="span-24 last" id="adminHead">
+        <div class="span-24 last"  id="adminHead">
+            <h1>
+                NTS产品管理中心</h1>
+            <h3><a href="/">返回产品中心</a></h3>
+            <hr />
         </div>
-        <div class="clear span-24 last" id="adminBody">
-            <div class="span-5" id="leftMenu">
+        <div class="clear span-24 " id="adminBody">
+            <div class="span-4 colborder" id="leftMenu">
                 <ul>
                     <li><a href="/admin/products/productimport.aspx">导入报价单Excel</a></li>
                     <li><a href="/admin/Supplier/SupplierImport.aspx">导入供应商Excel</a></li>
