--- a/Web/site.master
+++ b/Web/site.master
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/Content/blueprint/screen.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="/Content/blueprint/print.css" type="text/css" media="print" />
     <!--[if lt IE 8]><link rel="stylesheet" href="/Content/blueprint/ie.css" type="text/css" media="screen, projection"/><![endif]-->
+    <link href="/Content/pager.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
