--- a/Web/Admin/admin.master
+++ b/Web/Admin/admin.master
@@ -25,6 +25,8 @@
                 <ul>
                     <li><a href="/admin/products/productimport.aspx">导入报价单Excel</a></li>
                     <li><a href="/admin/Supplier/SupplierImport.aspx">导入供应商Excel</a></li>
+                    <li><a href="/admin/Category/Categoryimport.aspx">导入分类Excel</a></li>
+                    <li><a href="/admin/Category/">分类列表</a></li>
                 </ul>
             </div>
             <div class="span-19 last" id="mainContent">
