--- a/Web/site.master
+++ b/Web/site.master
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/Content/blueprint/screen.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="/Content/blueprint/print.css" type="text/css" media="print" />
     <!--[if lt IE 8]><link rel="stylesheet" href="/Content/blueprint/ie.css" type="text/css" media="screen, projection"/><![endif]-->
-    <link href="/Content/pager.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/pager.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/css/site.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -31,7 +32,7 @@
             </div>
         </div>
         <div class="clear span-24 last" id="adminFoot">
-        <a href="/admin/">管理中心</a>
+        NTS
         </div>
     </div>
     </form>
