--- a/Web/Content/css/site.css
+++ b/Web/Content/css/site.css
@@ -1,6 +1,6 @@
 ﻿#adminHead 
 {
     margin:10px 0;
-    border-bottom:solid 1px #777;
+    border-bottom:solid 1px #aaa;
     text-align:center;
 }
