--- a/Web/Admin/admin.master
+++ b/Web/Admin/admin.master
@@ -30,7 +30,9 @@
                     <li><a href="/admin/Category/Categoryimport.aspx">导入分类Excel</a></li>
                     <li><a href="/admin/Category/">分类列表</a></li>
                     <li><a href="/admin/OperationLog/">导入记录</a></li>
-                      <li><a href="/admin/products/CreateProductTag.aspx">导入产品集</a></li>
+                    <li><a href="/admin/products/CreateProductTag.aspx">导入产品集</a></li>
+                    <li><span>------导出------</span></li>
+                    <li><a href="/admin/products/ProductExport.aspx">产品信息导出</a></li>
                 </ul>
             </div>
             <div class="span-19 last" id="mainContent">
